--- a/style.css
+++ b/style.css
@@ -352,6 +352,8 @@ template {
 button {
   border: none;
   outline: none;
+  background-color: transparent;
+  cursor: pointer;
 }
 * {
   font-family: "Roboto", sans-serif;
@@ -657,4 +659,96 @@ a {
   line-height: 120%;
   letter-spacing: -0.03em;
   color: #2f3a5a;
+}
+.calendar {
+  padding: 31px;
+  margin-top: 100px;
+  background: #ffffff;
+  box-shadow: 4px 4px 16px rgba(39, 92, 141, 0.1);
+  border-radius: 8px;
+}
+.calendar p {
+  font-size: 24px;
+  line-height: 110%;
+  text-align: center;
+  letter-spacing: -0.045em;
+  color: #c1cdd3;
+}
+.calendar_date {
+  max-width: 45%;
+  padding: 0 28px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 25px;
+  padding-bottom: 30px;
+  margin-top: 30px;
+  border-radius: 6px;
+  border: 0.1px solid #c1cdd3;
+}
+.month {
+  display: flex;
+  align-items: center;
+}
+.month h2 {
+  margin: 0 10px;
+  text-align: center;
+  letter-spacing: 0.142685px;
+  color: #23242a;
+  font-size: 20px;
+  line-height: 29px;
+  font-weight: normal;
+}
+.weekdays {
+  margin-top: 25px;
+  display: flex;
+  align-items: center;
+}
+.weekdays div {
+  text-align: center;
+  letter-spacing: 1.78356px;
+  text-transform: uppercase;
+  color: #23242a;
+  font-weight: normal;
+  font-size: 11.8904px;
+  line-height: 19px;
+  padding: 0 17px;
+}
+.prev-date{
+  opacity: 0;
+}
+.next-date{
+  opacity: 0;
+}
+.days {
+  display: flex;
+  width: 70%;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.days div {
+  cursor: pointer;
+  flex: 0 0 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid transparent;
+}
+.days div.active{
+  background: rgba(245, 223, 77, 0.4);
+  border: 2px solid #FACA30;
+  border-radius:50%;
+}
+.days div.active span{
+  color: #FACA30;
+}
+.days div span {
+  text-align: center;
+  letter-spacing: 0.261589px;
+  color: #7a7585;
+  padding: 10px 8px;
+  font-weight: 500;
+  font-size: 16.6465px;
+  line-height: 26px;
 }
